BusOne/src/objects/Contract_Line_vod__c.object
<CustomObject>
    <description>Child of the Contract_vod object. Holds target information of selected product(s), and is associated to a Contract.</description>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <description>Lookup to corresponding Contract Header.</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR ( NOT (2 OR 4))</booleanFilter>
            <errorMessage>Contract Line record type does not match Contract record type.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Device_Type_vod__c</fullName>
        <description>Used to capture the device used to generate the record.</description>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPad_vod</fullName>
                </value>
                <value>
                    <fullName>WinModern_vod</fullName>
                </value>
                <value>
                    <fullName>Tablet_vod</fullName>
                </value>
                <value>
                    <fullName>Online_vod</fullName>
                </value>
                <value>
                    <fullName>Data_Load_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EM_Rate_Max_vod__c</fullName>
        <description>Indicates the maximum rate for the service. This field is only used by Veeva Event Management.</description>
        <label>Rate Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EM_Rate_Min_vod__c</fullName>
        <description>Indicates the minimum rate for the service. This field is only used by Veeva Event Management.</description>
        <label>Rate Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EM_Rate_Type_vod__c</fullName>
        <description>Indicates the rate type for a service. This field is only used by Veeva Event Management.</description>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hour_vod</fullName>
                </value>
                <value>
                    <fullName>Day_vod</fullName>
                </value>
                <value>
                    <fullName>Event_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EM_Rate_vod__c</fullName>
        <description>Indicates the rate for the service. This field is only used by Veeva Event Management.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EM_Service_Quantity_Max_vod__c</fullName>
        <description>Indicates the maximum quantity for the service. This field is only used by Veeva Event Management.</description>
        <label>Service Quantity Maximum</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EM_Service_Quantity_Min_vod__c</fullName>
        <description>Indicates the minimum quantity for the service. This field is only used by Veeva Event Management.</description>
        <label>Service Quantity Minimum</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EM_Service_Quantity_vod__c</fullName>
        <description>Indicates the quantity for the service. This field is only used by Veeva Event Management.</description>
        <label>Service Quantity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EM_Total_Payment_vod__c</fullName>
        <description>Indicates the final payment value to be applied at the line level according to rate and quantity limits and user overrides. This field is only used by Veeva Event Management.</description>
        <formula>EM_Rate_vod__c  * EM_Service_Quantity_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End date when the contract line is valid.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IM_Consumer_Price_vod__c</fullName>
        <description>Contract Line corresponding field to Consumer_Price_vod in IM Lines.</description>
        <label>IM Consumer Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM_Facings_horizontal_vod__c</fullName>
        <description>Contract Line corresponding field to Horizontal_vod in IM Lines.</description>
        <label>IM Horizontal</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Facings_simple_vod__c</fullName>
        <description>Contract Line corresponding field to Facings_vod in Inventory Monitoring Line.</description>
        <label>IM Facings</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Facings_vertical_vod__c</fullName>
        <description>Contract Line corresponding field to Vertical_vod in IM Lines.</description>
        <label>IM Vertical</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Inventory_vod__c</fullName>
        <description>Contract Line corresponding field to Inventory_vod in IM Lines.</description>
        <label>IM Inventory</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Layer_vod__c</fullName>
        <description>Contract Line corresponding field to Layer in IM Lines.</description>
        <label>IM Layer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above_eye_level</fullName>
                </value>
                <value>
                    <fullName>Eye_level</fullName>
                </value>
                <value>
                    <fullName>Below_eye_level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IM_Moved_Goods_vod__c</fullName>
        <description>Contract Line corresponding field to Moved_Goods_vod in IM Lines.</description>
        <label>IM Moved Goods</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Position_vod__c</fullName>
        <description>Contract Line corresponding field to Position_vod in IM Lines.</description>
        <label>IM Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Front_of_counter</fullName>
                </value>
                <value>
                    <fullName>Back_of_counter</fullName>
                </value>
                <value>
                    <fullName>Open_shelf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the record cannot be edited.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatory_Contract_Line_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the Contract Line is required.</description>
        <label>Mandatory Contract Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Contract Line was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Date and time the Contract Line was last modified on the mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <description>Allows to capture comments for the contract line.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OM_List_Amount_Achieved_vod__c</fullName>
        <description>Calculated by batch job. Shows progress against the defined target.</description>
        <label>OM List Amount Achieved</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_List_Amount_Remaining_vod__c</fullName>
        <description>Shows remaining list amount to reach the defined target (target minus achieved).</description>
        <formula>OM_List_Amount_Target_vod__c - OM_List_Amount_Achieved_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM List Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_List_Amount_Target_vod__c</fullName>
        <description>Contract Line corresponding field to List_Amount_vod in OM and OM Lines.</description>
        <label>OM List Amount Target</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Net_Amount_Achieved_vod__c</fullName>
        <description>Calculated by batch job. Shows progress against the defined target.</description>
        <label>OM Net Amount Achieved</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Net_Amount_Remaining_vod__c</fullName>
        <description>Shows remaining net amount to reach the defined target (target minus achieved).</description>
        <formula>OM_Net_Amount_Target_vod__c - OM_Net_Amount_Achieved_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM Net Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Net_Amount_Target_vod__c</fullName>
        <description>Contract Line corresponding field to Net_Amount_vod in OM and OM Lines.</description>
        <label>OM Net Amount Target</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Achieved_vod__c</fullName>
        <description>Calculated by batch job. Shows progress against the defined target.</description>
        <label>OM Quantity Achieved</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Remaining_vod__c</fullName>
        <description>Shows remaining quantity to reach the defined target (target minus achieved).</description>
        <formula>OM_Quantity_Target_vod__c - OM_Quantity_Achieved_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Target_vod__c</fullName>
        <description>Contract Line corresponding field to Quantity_vod in OM and OM Lines.</description>
        <label>OM Quantity Target</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a non-Admin User to make changes to a Contract Line records associated with Activated Contracts. This is only intended for integration and/or custom pages/coding and should not be placed on the page layout.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Identifier_vod__c</fullName>
        <description>This is a pull-in field that allows the display of the Product Identifier field from the Product Catalog object on Contract Lines.</description>
        <label>Product Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filtered lookup to products of type Detail, Order, or Product Group.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR ((3 OR 5) AND 4) OR ( NOT (2 OR 4))</booleanFilter>
            <filterItems>
                <field>Product_vod__c.Product_Type_vod__c</field>
                <operation>equals</operation>
                <value>Detail, Order, Product Group</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>Product_vod__c.Product_Type_vod__c</field>
                <operation>equals</operation>
                <value>Inventory Monitoring</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <filterItems>
                <field>Product_vod__c.Inventory_Monitoring_vod__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Name_vod__c</fullName>
        <description>The name of the service included in the speaker contract</description>
        <formula>Service_vod__r.Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The service included in the speaker contract.</description>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Catalog_vod__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Speaker_Service_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start date when the contract line is valid.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Contract Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000000000}</displayFormat>
        <label>Contract Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <recordTypes>
        <fullName>EM_Speaker_Contract_vod</fullName>
        <active>true</active>
        <description>Used to define the list of services that are covered by a contract with a speaker.</description>
        <label>EM_Speaker_Contract_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Listing_vod</fullName>
        <active>true</active>
        <description>Used to record contractual obligations for Inventory Monitoring data, such as product placement and moved inventory.</description>
        <label>Listing_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_vod</fullName>
        <active>true</active>
        <description>Used to record contractual obligations for product quantities and values pertaining to Orders.</description>
        <label>Sales_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>